HiC svg cutoff legend part avoid overlap

--- a/frontend/src/components/trackContainers/MetadataHeader.css
+++ b/frontend/src/components/trackContainers/MetadataHeader.css
@@ -14,3 +14,7 @@
     text-align: right;
     vertical-align: middle;
 }
+
+.MetadataHeader-terms li:first-child {
+    writing-mode: horizontal-tb;
+}
